# azure-assessor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
azure_assessor/: __init__.py  __main__.py  advisor.py  app.py  azure_client.py  export.py  models.py  pricing.py
tests/: conftest.py  test_advisor.py  test_app.py  test_azure_client.py  test_export.py  test_models.py  test_pricing.py
