[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-assessor"
version = "0.1.0"
description = "Interactive TUI for Azure VM SKU assessment, pricing, and fleet planning"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "azure-identity>=1.17.0",
    "azure-mgmt-compute>=33.0.0",
    "azure-mgmt-resource>=23.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
azure-assessor = "azure_assessor.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["azure_assessor"]
